@@ -14,6 +14,8 @@
   require_once "approval.php";
   require_once "show_data.php";
   require_once "occupancy_list.php";
+  require_once "act_as.php";
+
   if( SAFETY_MONITOR_SIGNUP ) {
     require_once "safety_monitor.php";
   }
@@ -106,7 +108,14 @@ function showNavbar($show) {
 	    }
 	  ?>
         </ul>
-        <a class='btn btn-secondary' href='https://<?php echo $_SERVER["SERVER_NAME"] ?>/Shibboleth.sso/Logout?return=https://login.wisc.edu/logout'>Log Out</a>&nbsp;&nbsp;
+	<?php if( REAL_REMOTE_USER_NETID == REMOTE_USER_NETID ) { ?>
+          <a class='btn btn-secondary' href='https://<?php echo $_SERVER["SERVER_NAME"] ?>/Shibboleth.sso/Logout?return=https://login.wisc.edu/logout'>Log Out</a>&nbsp;&nbsp;
+	<?php } else {
+          echo "<form action='",SELF_FULL_URL,"' enctype='multipart/form-data' method='POST'>\n";
+	  echo "<input type='hidden' name='act_as' value=''/>\n";
+	  echo "<input type='submit' value='Stop Acting As' class='btn btn-secondary'/>\n";
+	  echo "</form>\n";
+        } ?>
         <span class="navbar-text" style='color: rgb(255,0,255)'><?php echo htmlescape(getWebUserName()) ?></span>&nbsp;
       </div>
     </nav>
